Fix on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,3 +1,15 @@
 body {
     padding: 8px;
 }
+
+.card {
+    width: 18rem;
+    margin: 6px;
+}
+
+@media only screen and (max-width: 425px) {
+    .card {
+        width: auto;
+        margin: 0px;
+    }
+}
